Correcciones en todos lados

--- a/4º Año/Bases de Datos/Unidad 4/1. Consultas SQL.md
+++ b/4º Año/Bases de Datos/Unidad 4/1. Consultas SQL.md
@@ -6,20 +6,19 @@ SELECT A1, A2, ... , An
 	WHERE P
 ```
 
-Cada $A_i$ representa a un atributo de tabla, cada $R_i$ a una relación y $P$ es un predicado que se aplica a la consulta.
+Donde cada $A_i$ representa un atributo de una relación o tabla, $R_i$ representa cada una de las relaciones y $P$ es un predicado que se aplica a la consulta.
+
+>[!caution] Sintaxis de las Consultas SQL
+>Existe un estándar que especifica todas las operaciones SQL y como es su sintaxis, pero cada implementador toma la decisión final de como será la sintaxis de su lenguaje de consulta, por lo que pueden existir una serie de diferencias en las consultas entre bases de datos y otra, aunque estas suelen ser mínimas.
 
 - **SELECT**: Lista los atributos deseados en el resultado de una consulta, corresponde a la ***proyección*** del álgebra relacional.
 	- Al contrario que en el álgebra relacional, SQL permite duplicados en las relaciones, esto es así debido a una cuestión de rendimiento y eficiencia, en caso de que deseemos eliminar duplicados debemos especificarlo explícitamente, utilizando la palabra `DISTINCT`.
-	- En caso de que se quiera seleccionar todos los atributos de los componentes de las tablas, se puede usar el símbolo \*, en lugar de especificar todos los atributos de forma explícita.
-	- Esta cláusula permite realizar operaciones aritméticas básicas entre constantes y valores de atributos.
-
->[!caution] Sintaxis de las Consultas SQL
->Existe un estándar que especifica todas las operaciones que debe incluir SQL y como es su sintaxis, pero cada implementador de la base de datos toma decisiones de como será la sintaxis de su lenguaje de consulta, por lo que pueden existir una serie de diferencias entre las consultas entre distintas bases de datos, aunque estas son mínimas.
-
-- **WHERE**: Especifica las condiciones que el resultado debe satisfacer, corresponde al predicado de la selección del álgebra relacional.
+	- En caso de que se quiera seleccionar todos los atributos de los componentes de las tablas, se puede usar \*, en lugar de especificar todos los atributos de forma explícita.
+	- Al igual que en el cálculo relacional extendido, esta cláusula permite realizar operaciones aritméticas básicas entre constantes y/o distintos atributos.
+- **WHERE**: Especifica las condiciones que el resultado debe satisfacer, corresponde al ***predicado en la operación de selección*** del álgebra relacional.
 	- En esta cláusula se utilizan conectores lógicos como `and`, `or` y `not`.
 	- Permite usar operadores de comparación como >, <, =, entre otros. SQL permite utilizar estos operadores con distintos tipos de datos como cadenas de textos o incluso fechas.
-	- En esta cláusula se puede utilizar el operador especial `between` para especificar intervalos de valores válidos. Este operador incluye ambos valores extremos del intervalo de valores especificados. Un ejemplo del uso de este operador es el siguiente:
+	- En esta cláusula se puede utilizar el operador especial `BETWEEN` para especificar intervalos de valores válidos. Este operador incluye ambos valores extremos del intervalo de valores especificados. Un ejemplo del uso de este operador es el siguiente:
 
 ```sql
 SELECT num_prestamo
@@ -28,7 +27,7 @@ SELECT num_prestamo
 ```
 
 - **FROM**: Lista las relaciones involucradas en la consulta. Define un producto cartesiano de las relaciones listadas.
-	- Si en esta cláusula se colocan dos tablas que posean un atributo con el mismo nombre, se debe especificar de qué tabla se quiere seleccionar el atributo, de lo contrario ocurrirá un error, por ejemplo:
+	- Si en esta cláusula se colocan dos tablas que posean un atributo con el mismo nombre y se desea mostrar este en el resultado de la consulta, se debe especificar la tabla de la cual se utilizará el valor, de lo contrario ocurrirá un error, por ejemplo:
 
 ```sql
 SELECT nombre_cliente, prestatario.numero_prestamo, importe
@@ -36,47 +35,50 @@ SELECT nombre_cliente, prestatario.numero_prestamo, importe
 	WHERE prestatario.numero_prestamo = prestamo.numero_prestamo;
 ```
 
-- **ORDER BY**: Hace que las tuplas resultantes de una consultase presenten en un cierto orden.
-	- Se puede incluir la cláusula `desc` para ordenar los elementos de manera descendente y `asc` para ordenarlos de manera ascendente. Ejemplo:
+- **ORDER BY**: Hace que las tuplas resultantes de una consulta se presenten en un cierto orden.
+	- Se puede incluir la cláusula `DESC` para ordenar los elementos de manera descendente y `ASC` para ordenarlos de manera ascendente. Ejemplo:
 
 ```sql
+-- Todos los clientes que tengan un prestamo en la sucursal de Nevacerrada
 SELECT DISTINCT C.nombre_cliente
 	FROM prestatario C, prestamo P
-	WHERE C.num_prestamo = P.num_prestamo AND C.nombre_sucursal = 'NAvacerrada'
+	WHERE C.num_prestamo = P.num_prestamo AND C.nombre_sucursal = 'Navacerrada'
 	ORDER BY C.nombre_cliente DESC;
 ```
 
+>[!tldr] Variables Tupla
+>En el ejemplo anterior se les asigna a la tabla de **prestatario** y **préstamo** un alias, estas son las variables tuplas, estas se definen en la cláusula `FROM` al igual que en el cálculo relacional de tuplas y son útiles para realizar cierto tipo de operaciones, además de permitir crear consultas más limpias y ordenadas.
+
 - **Renombramiento**: SQL proporciona un mecanismo para renombrar tanto relaciones como atributos. Para ello utiliza la cláusula `as`, con el siguiente formato `nombre_viejo as nombre_nuevo`.
-- **Variables Tupla**: Las variables tupla se definen en la cláusula FROM al igual que en el cálculo relacional de tuplas y so útiles para realizar ciertos tipos de operaciones, además de permitirnos crear consultas más limpias. Ejemplo:
-
-```sql
-SELECT DISTINCT T.nombre_sucursal
-	FROM sucursal T, sucursal S
-	WHERE T.activo > S.activo AND S.ciudad_sucursal = 'Barcelona'
-```
-
 - **Operaciones sobre Cadenas de Texto**: El estándar de SQL define una serie de operaciones y operadores para la manipulación de cadenas, en general son las mismas que se encuentran en cualquier lenguaje de programación, con la diferencia de que dependiendo la base de datos van a variar los operadores y las formas de realizar ciertas operaciones.
-- **Operaciones Set**: Son el conjunto de operaciones definidas para los conjuntos, estas son `UNION`, `INTERSECT` y `EXCEPT`, al contrario que con la cláusula ***SELECT***, las operaciones Set si eliminas los duplicados, si se quiere conservar los duplicados se debe especificar explícitamente utilizando la cláusula `ALL`, por ejemplo `UNION ALL`.
-	- Considerando que una tupla aparece $m$ veces en $r$ y $n$ veces en $s$, entonces cuando se realice una de estas operaciones que admiten repeticiones, la tupla se repetirá $m + n$ veces en el caso de la unión, $min(m, n)$ veces para la intersección y $max(0, m-n)$ en caso de la diferencia.
+- **Operaciones Set**: Son el conjunto de operaciones definidas para los conjuntos, muchas bases de datos solo implementan las 3 operaciones básicas `UNION`, `INTERSECT` y `EXCEPT`. Las operaciones Set eliminan los duplicados, debido a que son operaciones de conjuntos.
+
+>[!note] Cláusula `ALL` en las Operaciones Set
+>En caso de que se desee conservar los duplicados se debe especificar explícitamente utilizando la cláusula `ALL`, por ejemplo `UNION ALL`. 
+>Consideremos que una tupla aparece $m$ veces en $r$ y $n$ veces en $s$, entonces cuando se realice una de estas operaciones la cantidad de veces que se repretirá la tupla sera:
+>- $m + n$ veces en el caso de la unión.
+>- $min(m, n)$ veces para la intersección.
+>- $max(0, m-n)$ en caso de la diferencia.
+
 - **Funciones de una Fila**: Toman uno o más valores de entrada de una sola fila, y retorna un valor por cada fila. Algunos ejemplos de esto son las funciones `UPPER`, `LOWER` o `ABS` entre muchas otras, estas funciones modifican los valores de las filas de manera independiente.
-- **Función de Agregación**: Las funciones de agregación son funciones que toman una colección, es decir, un conjunto o multiconjunto de valores como entrada y producen un único valor como salida. SQL proporciona 5 funciones de agregación primitivas, las cuales son `AVG`, `MIN`, `MAX`, `SUM` y `COUNT`.
-	- La cláusula `GROUP BY` te permite agrupar los resultados de las funciones de agregación de acuerdo al atributo especificado. Cuando se utiliza esta cláusula solo podrán utilizarse en la cláusula `SELECT`, aquellos atributos que aparezcan en el `GROUP BY`.
-	- La cláusula `HAVING` te permite especificar predicados para la cláusula `GROUP BY`, véase el ejemplo:
+- **Función de Agregación**: Las funciones de agregación son funciones que toman una colección de valores como entrada y producen un único valor como salida. SQL cuenta con 5 funciones de agregación primitivas, `AVG`, `MIN`, `MAX`, `SUM` y `COUNT`.
+	- La cláusula `GROUP BY` te permite agrupar los resultados de las funciones de agregación de acuerdo a los atributos especificados. Cuando se utiliza esta cláusula, el `SELECT` solo puede contener los atributos que aparecen en el `GROUP BY` o atributos calculados a partir de otros atributos.
+	- La cláusula `HAVING` te permite especificar predicados para la cláusula `GROUP BY`, ya que el `WHERE` solo se aplica a las relaciones especificadas en la cláusula `FROM`, véase el ejemplo:
 
 ```sql
--- Lista a todas las sucursales cuyo saldo sea mayor a 1200 dolares
-SELECT nombre_sucursal, avg (saldo)
+-- Lista a todas las sucursales cuyo saldo medio sea mayor a 1200 dolares
+SELECT nombre_sucursal, AVG(saldo)
 	FROM cuenta
 	GROUP BY nombre_sucursal
-	HAVING avg (saldo) > 1200
+	HAVING AVG(saldo) > 1200
 ```
 
 ### Valores Nulos
 
-SQL permite el uso de valores ***null*** para indicar la ausencia de información sobre el valor de un atributo. En un predicado se puede usar `IS NULL` para comprobar si un valor es nulo. Cualquier comparación que implique un valor nulo, SQL lo trata como desconocido o unknown, es importante tener esto en cuenta debido a que estos valores puede repercutir en las operaciones que se realicen en las consultas.
+SQL permite el uso de valores ***null*** para indicar la ausencia de información sobre el valor de un atributo. En un predicado se puede usar `IS NULL` para comprobar si un valor es nulo. Cualquier comparación que implique un valor nulo, SQL lo trata como desconocido o ***unknown***, es importante tener esto en cuenta debido a que estos valores puede repercutir en las operaciones que se realicen en las consultas.
 
 >[!tldr] Valores Desconocidos y Operadores Lógicos
->Para cada uno de los operadores lógicos, los calores desconocidos pueden alterar el resultado de acuerdo a la operación realizada:
+>Para cada uno de los operadores lógicos, los valores desconocidos pueden alterar el resultado de acuerdo a la operación realizada:
 >- **OR**:
 >	- (unknown or true) = true.
 >	- (unknown or false) = unknown.
@@ -90,11 +92,11 @@ SQL permite el uso de valores ***null*** para indicar la ausencia de informació
 >
 >El predicado de una cláusula `WHERE` se trata como falso, si la evaluación es ***unknown***.
 
-Casi todas las funciones de agregación ignoran los valores nulos a la hora de realizar sus cálculos, a excepción de la función `COUNT`. La única forma que alguna de estas funciones de un valor nulo es que no exista ningún valor para dicho atributo en todas las tuplas de la tabla.
+Casi todas las funciones de agregación ignoran los valores nulos a la hora de realizar sus cálculos, a excepción de la función `COUNT`. La única forma en la que estas funciones arrojarían un valor nulo es si no exista ningún valor para dicho atributo en todas las tuplas de la tabla.
 
 ### Subconsultas Anidadas
 
-SQL provee un mecanismo para anidar subconsultas. Una subconsulta es una expresión ***select-from-where*** que se anida dentro de otra consulta. Un uso común de subconsultas es llevar a cabo comprobaciones sobre pertenencia a conjuntos, comparación de conjuntos o comparación de valores con un conjunto. Ahora veremos algunos ejemplos de usos comunes.
+SQL provee un mecanismo para anidar subconsultas. Una subconsulta es una expresión ***select-from-where*** que se anida dentro de otra consulta. Un uso común de subconsultas es llevar a cabo comprobaciones sobre pertenencia a conjuntos, comparación de conjuntos o comparación de valores con un conjunto. Véase algunos ejemplos de su uso común.
 
 ```sql
 -- Todos los clientes que tengan una cuenta y un pŕestamo en el banco
@@ -102,6 +104,13 @@ SELECT DISTINCT nombre_cliente
 	FROM prestatario
 	WHERE nombre_cliente IN (SELECT nombre_cliente FROM depositante);
 ```
+
+>[!important] Operadores de Subconsultas
+>Los operadores de subconsultas son un tipo particular de cláusula que se utiliza generalmente en las comparaciones para ver si el valor cumple con ducha condición para la relación resultante de la subconsulta, estos operadores son los siguientes:
+>- `SOME`: Este operador comprueba si algún valor de la relación resultante de la subconsulta satisface la condición de comparación, si esta se cumple para aunque sea un valor, entonces este operador devuelve verdadero.
+>- `ALL`: Comprueba que se satisfaga la condición de comparación para todos los valores de la relación resultante de la subconsulta, en caso de que uno de los valores de dicha relación no cumpla con la condición, el operador devuelve falso.
+>- `EXIST`: Verificar si el resultado de una subconsulta contiene al menos una fila, es decir, el resultado no es un conjunto vacío ($r \Leftrightarrow r \neq \varnothing$.). Se utiliza principalmente para condiciones donde necesitas comprobar si un conjunto de datos asociado tiene o no algún resultado.
+>	- Esta cláusula puede ser negada utilizando el operador lógico `NOT`.
 
 ```sql
 -- Todas las sucursales que tengan un activo mayor a al menos una sucursal de
@@ -123,12 +132,6 @@ SELECT nombre_sucursal
 							WHERE ciudad_sucursal = ‘Barcelona’)
 ```
 
-La cláusula `EXISTS` se usa para verificar si el resultado de una subconsulta contiene al menos una fila, es decir, el resultado no es un conjunto vacío. Se utiliza principalmente para condiciones donde necesitas comprobar si un conjunto de datos asociado tiene o no algún resultado.
-- `EXISTS` | $r \Leftrightarrow r \neq \varnothing$.
-- `NOT EXISTS` | $r \Leftrightarrow r = \varnothing$.
-
-Ejemplo de una consulta con esta cláusula:
-
 ```sql
 -- Clientes que tengan una cuenta en todas las sucursales de Barcelona
 SELECT DISTINCT S.nombre_cliente
@@ -144,7 +147,7 @@ SELECT DISTINCT S.nombre_cliente
 ```
 
 >[!note] Explicación de la Lógica de la Consulta
->La primera subconsulta obtiene todas las sucursales que pertenecen a Barcelona, la segunda subconsulta obtiene las sucursales en la que cada usuario tiene una cuenta, con el `EXPECT`, lo que lograremos es obtener un conjunto vacío para todos los usuarios que tengan cuentas en todas las sucursales, con `NOT EXISTS` lo que conseguimos es que se agregue la relación resultante todas aquellas personas para las que se obtiene un conjunto vacío.
+>La primera subconsulta obtiene todas las sucursales que pertenecen a Barcelona, la segunda subconsulta obtiene las sucursales en la que cada usuario tiene una cuenta. Con el `EXPECT`, lo que lograremos es obtener un conjunto vacío para todos los usuarios que tengan cuentas en todas las sucursales, con `NOT EXISTS` lo que conseguimos es que se agregue la relación resultante todas aquellas personas para las que se obtiene un conjunto vacío.
 
 #### Relaciones Derivadas
 
@@ -152,7 +155,7 @@ SQL permite el uso de subconsultas en la cláusula `FROM`. En una expresión de 
 
 ```sql
 SELECT nombre_sucursal, res.saldo_medio
-	FROM (SELECT nombre_sucursal, avg (saldo) as saldo_medio
+	FROM (SELECT nombre_sucursal, AVG(saldo) as saldo_medio
 		FROM cuenta
 		GROUP BY nombre_sucursal) res
 	WHERE res.saldo_medio > 1200;
@@ -171,4 +174,3 @@ Dentro de los tipos de reuniones encontramos a los siguientes tipos:
 
 >[!note] Reunión Natural
 >Las reuniones naturales en SQL se consiguen a través de la cláusula `NATURAL` que se pone antes del tipo de reunión, de esta forma la reunión se efectuará de acuerdo al atributo en común entre las dos relaciones.
-
