--- a/4º Año/Calculo Numerico/Unidad 2/2. Ecuaciones Lineales.md
+++ b/4º Año/Calculo Numerico/Unidad 2/2. Ecuaciones Lineales.md
@@ -47,7 +47,7 @@ Al contrario que los métodos directos que nos dan un resultado concreto luego d
 
 >[!example] Norma de Vectores y Matrices
 >Al realizar aproximaciones para calcular el valor de los coeficientes de una matriz se debe saber si dicho error es grande, en un sistema de ecuaciones lineales de la forma $X = A^{-1} \cdot C$, el error es grande si la matriz inversa lo es, y es pequeña si dicha matriz también lo es, cabe aclarar que el tamaño de una matriz no está relacionado con su orden, sino que se utiliza las normas de las matrices para denotar su tamaño.
->Estas normas pueden ser columna-suma o fila-suma, en la cual se calcula la suma de los calores absolutos de las columnas o filas y el mayor de esos resultados representaría el tamaño de matriz. Mientras que la norma de Fröbenius se consigue al sumar todos los elementos de la matriz al cuadrado y luego al resultado aplicarle una raíz cuadrada.
+>Estas normas pueden ser columna-suma o fila-suma denotada como $||A||_1$, en la cual se calcula la suma de los calores absolutos de las columnas o filas y el mayor de esos resultados representaría el tamaño de matriz, otra norma utilizada es la norma de magnitud máxima que toma como tamaño de la matriz el mayor número de la matriz en su valor absoluto. La norma de Fröbenius es otra medida del tamaño de las matrices y se consigue al sumar todos los elementos de la matriz al cuadrado y luego al resultado aplicarle una raíz cuadrada.
 >
 > #### Número de Condición de una Matriz
 >El número de condición de una matriz es una medida que proporciona información sobre la sensibilidad de la solución de un sistema de ecuaciones lineales a cambios en los términos independientes o en los elementos de la matriz. En términos más específicos, este número ayuda a entender cómo el error en los datos de entrada se amplifica en el resultado debido a las operaciones numéricas realizadas durante la solución del sistema. Este término se calcula de la siguiente forma:
@@ -73,7 +73,7 @@ Para aplicar este método, se considera una primera aproximación al valor de la
 
 #### Método de Gauss-Seidel
 
-Es un método iterativo que disminuye el error de redondeo, se denomina también de desplazamientos sucesivos o de iteraciones parciales. Sí se tiene un conjunto de $n$ ecuaciones. La convergencia se puede verificar usando el criterio de error relativo. Este método se diferencia del de Jacobi, puesto que una vez que se calcula una aproximación a una incógnita se utiliza esta aproximación en la misma iteración.
+Es un método iterativo que disminuye el error de redondeo, se denomina también de desplazamientos sucesivos o de iteraciones parciales. Sí, se tiene un conjunto de $n$ ecuaciones. La convergencia se puede verificar usando el criterio de error relativo. Este método se diferencia del de Jacobi, puesto que una vez que se calcula una aproximación a una incógnita se utiliza esta aproximación en la misma iteración para calcular las siguientes incógnitas.
 Las condiciones suficientes para que el método de Gauss-Seidel converja es que la matriz de coeficientes sea diagonal dominante o bien que la matriz de coeficientes sea simétrica y definida positiva.
 
 >[!tldr] Criterio de Error Relativo
