--- a/4º Año/Comunicaciones y Redes/Unidad 2/2. Protocolos de Internet.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 2/2. Protocolos de Internet.md
@@ -1,10 +1,10 @@
 En el nivel de las aplicaciones de usuario existen una amplia variedad de protocolos de red, que se utilizan para diversos motivos, por ejemplo, HTTP para transferir hipertextos o NFS para compartir archivos a través de una red.
 Las principales características que tienen estos protocoles de nivel de aplicación es la siguiente:
 
-- Implementan modelo cliente-servidor como entorno de trabajo.
-- Son inherentemente distribuidas
-- Facilitan compartir recursos a grandes distancias
-- Distribuyen la carga entre varios servidores para mejorar el tiempo de respuesta
+- Implementan modelo cliente-servidor como entorno de trabajo..
+- Son inherentemente distribuidas.
+- Facilitan compartir recursos a grandes distancias.
+- Distribuyen la carga entre varios servidores para mejorar el tiempo de respuesta.
 - Replicación de datos para acercarlos a los usuarios y mejor tolerancia a fallas.
 - Administración local.
 
@@ -29,14 +29,14 @@ Los protocolos, a muy grandes rasgos, se puede decir que tienen 3 componentes fu
 Al igual que DNS, el protocolo HTTP se basa en la arquitectura o modelo cliente-servidor, en donde:
 
 - Los navegadores son los agentes de usuario que recuperan los recursos deseados, facilitando la navegación a través de la web e implementan el lado del cliente del protocolo.
-- Los servidores alojan objetos web direccionables por una URL, por ejemplo, Apache-Microsoft Internet Information Server.
+- Los servidores alojan objetos web direccionables por una URL.
 
-El protocolo HTTP define la estructura de los mensajes y como se realiza el intercambio entre el cliente y el servidor, utilizando TCP como protocolo de transporte. Además, este protocolo establece una serie de métodos mediante las cuales el cliente realiza las peticiones, cuando se realiza cada petición tanto el cliente como el servidor reciben un código numérico que indican diferentes cosas de acuerdo al tipo de código, todo esto a su vez definido dentro de la especificación de HTTP.
+El protocolo HTTP define la estructura de los mensajes y como se realiza el intercambio entre el cliente y el servidor, utilizando TCP como protocolo de transporte, pudiendo recibir peticiones por el puerto 80. Además, este protocolo establece una serie de métodos mediante las cuales el cliente realiza las peticiones, cuando se realiza cada petición tanto el cliente como el servidor reciben un código numérico que indican diferentes cosas de acuerdo al tipo de código, todo esto a su vez definido dentro de la especificación de HTTP.
 
 >[!tldr] Conexiones Persistentes y no Persistentes
 >Cuando hablamos del protocolo HTTP, decimos que una ***conexión no es persistente*** si todos los mensajes de solicitud/respuesta para cada objeto se envía a través de distintas conexiones TCP, mientras que decimos que la ***conexión es permanente*** si múltiples mensajes se envían a través de la misma conexión TCP.
 
-Este protocolo cuenta con múltiples versiones, su versión 2 concretamente, fue diseñada para ser el protocolo de próxima generación para aplicaciones web, introduciendo nuevos mecanismos significativos, para empezar funciona en la capa superior de TCP, es decir, en la ***capa de seguridad de transporte (TLS)***. A su vez, lógicamente se divide en tres niveles:
+Este protocolo cuenta con múltiples versiones, su versión 2 fue diseñada para ser el protocolo de próxima generación para aplicaciones web, introduciendo nuevos mecanismos significativos, para empezar funciona en la capa superior de TCP, es decir, en la ***capa de seguridad de transporte (TLS)***. A su vez, lógicamente se divide en tres niveles:
 
 1. **Nivel de Transmisión**: Abarca el control de flujo, streams y tramas.
 2. **HPACK**: Se encarga de la codificación binaria y de implementar los protocolos de compresión.
@@ -51,7 +51,7 @@ Las novedades de la versión 2 del protocolo son las siguientes:
 
 Los principales bloques de transmisión de HTTP 2 son los siguientes:
 
-- **Tramas**: La unidad de datos básica, que reemplaza el encabezado HTTP / 1.1 y el formato de cuerpo. Las frames HTTP / 2 tienen una codificación binaria. Los marcos se dividen en header, datos y marcos de setting.
+- **Tramas**: La unidad de datos básica, que reemplaza el encabezado HTTP / 1.1 y el formato de cuerpo. Las frames HTTP / 2 tienen una codificación binaria, lo que lo vuelve independiente del sistema. Los marcos se dividen en header, datos y marcos de setting.
 - **Streams**: Reemplaza el protocolo de solicitud y respuesta de versiones anteriores. Es un canal bidireccional en el cual las tramas se transmiten. Un flujo incluye una sola solicitud y una única respuesta.
 - **Conexión TCP**: para reducir el número de conexiones TCP utilizadas por el servidor, permite que una sola conexión TCP lleve múltiples streams (multiplexación).
 
@@ -86,7 +86,7 @@ La infraestructura de los correos electrónicos está compuesta, además de por 
 1. Los ***agentes de usuario*** que le permiten a los distintos usuarios leer sus correos electrónicos.
 2. Los ***servidores de correo***, son una pieza central de la infraestructura de correos, en estos servidores se tendrá un buzón de entrada para cada usuario.
 
-Por lo general cuando se envía un correo, este se dirige primero al servidor de correos del emisor y de allí al servidor de correos del destinatario, el servidor del emisor no puede enviar dicho mensaje al servidor del receptor, el mensaje se coloca en una cola de mensajes e intenta enviarlo más tarde. En este contexto, SMTP es el protocolo principal utilizado para enviar correos a través de la red, este protocolo se ejecuta en todos los servidores de correos actuando como cliente y servidor al mismo tiempo.
+Por lo general cuando se envía un correo, este se dirige primero al servidor de correos del emisor, a través del puerto 23, y de allí al servidor de correos del destinatario, el servidor del emisor no puede enviar dicho mensaje al servidor del receptor, el mensaje se coloca en una cola de mensajes e intenta enviarlo más tarde. En este contexto, SMTP es el protocolo principal utilizado para enviar correos a través de la red, este protocolo se ejecuta en todos los servidores de correos actuando como cliente y servidor al mismo tiempo.
 SMTP tiene algunos defectos como el hecho de que todos los encabezados deben estar codificados utilizando ASCII, lo que lo vuelve inseguro, debido a que cualquiera que intercepte la conexión puede leer el encabezado del mensaje, además de ser tedioso a la hora de enviar archivos multimedia, ya que todo debe ser codificado al ASCII. Otro gran problema es que SMTP no utiliza servidores de correos intermedios para realizar los envíos, esto quiere decir que si dos servidores se encuentran geográficamente en dos regiones distintas, la conexión TCP será directa a pesar de lo inconveniente que esto resulta.
 
 ##### Multipurpose Internet Mail Extension (MIME)
@@ -103,11 +103,11 @@ Existen protocolos especiales de acceso al correo para transferencia de mensajes
 	2. El agente de usuario envía nombre de usuario y contraseña para realizar una autenticación (Fase de Autenticación).
 	3. Se descargan los correo de forma local, los agentes de POP3 suelen ser configurados para descargar y borrar los correos de la bandeja de entrada o descargar y guardar (Fase de Transacción).
 	4. El cliente termina la operación y el servidor se actualiza (Fase de Actualización).
-- **IMAP (Internet Mail Access Protocol)**: Posee más funcionalidades que ***POP3***, pero es mucho más complejo, la principal diferencia es que IMAP permite que el agente de usuario acceda al almacenamiento de correos, que se encuentra en el servidor de correos, como si fuera local, desde distintas localizaciones, sin necesidad de tener que mover los mensajes de un equipo a otro. Además de permitir al agente de usuario obtener partes específicas del mensaje, tales como encabezado, crear distintas carpetas, mover correos a otras carpetas y realizar búsquedas de forma remota.
+- **IMAP (Internet Mail Access Protocol)**: Posee más funcionalidades que ***POP3***, pero es mucho más complejo, la principal diferencia es que IMAP permite que el agente de usuario acceda al almacenamiento de correos, que se encuentra en el servidor de correos, como si fuera local, desde distintas localizaciones, sin necesidad de tener que mover los mensajes de un equipo a otro. Además de permitir al agente de usuario obtener partes específicas del mensaje, tales como encabezado, crear distintas carpetas, mover correos a otras carpetas y realizar búsquedas de forma remota. Este protocolo utiliza el puerto 143 para realizar su comunicación.
 - **HTTP**: Envío y recepción de mensajes a través de HTTP, esto permite utilizar a los navegadores web como agentes de usuario. Aunque varíe la forma de realizar los envíos, en el fondo todos cuando se envía un correo primero va a ir al servidor de correos del emisor y desde allí ser enviado al buzón de correo del servidor de destino.
 
 ### File Transfer Protocol (FTP)
 
 Es un protocolo que le permite a un host transferir o descargar archivos desde un servidor, este protocolo requiere el primer lugar realizar una autenticación del usuario, a través de un nombre y su respectiva contraseña, una vez se realice esta autenticación el usuario ya puede comenzar a transferir archivos desde el servidor y viceversa, tanto la conexión como la transferencia de los documentos se dan a través de TCP.
-Este protocolo tiene una particularidad, ya que utiliza dos conexiones TCP simultáneas para transferir archivos, una se utiliza para realizar el control de los datos (a través del puerto 21), es decir, chequeo y control de errores y la segunda para la transferencia de datos como tal, como esta información de control no se envía por la misma conexión TCP se dice que esta información se envía ***fuera de banda***.
+Este protocolo tiene una particularidad, ya que utiliza dos conexiones TCP simultáneas para transferir archivos, una se utiliza para realizar los comandos y el control de los datos (a través del puerto 21) y la segunda (a través del puerto 20) para la transferencia de datos como tal, como esta información de control no se envía por la misma conexión TCP se dice que esta información se envía ***fuera de banda***.
 Al contrario que HTTP, FTP cuenta con servidores que mantienen el estado del usuario, esto hace que la cantidad de conexiones simultáneas que pueda manejar el servidor sean limitadas.
