Agregado SOA Redes, DB completado

--- a/4º Año/Bases de Datos/Unidad 4/1. Consultas SQL.md
+++ b/4º Año/Bases de Datos/Unidad 4/1. Consultas SQL.md
@@ -172,5 +172,19 @@ Dentro de los tipos de reuniones encontramos a los siguientes tipos:
 - **RIGHT OUTER JOIN**.
 - **FULL OUTER JOIN**.
 
+En SQL los JOINs se pueden realizar de varias maneras, veamos algunos ejemplos:
+
+```sql
+-- Reunion utilizando la cláusula ON
+prestamo INNER JOIN prestatario ON
+	prestamo.num_prestamo = prestatario.num_prestamo
+
+-- Reunión utilizando la cláusula USING
+prestamo INNER JOIN prestatario USING(num_prestamo)
+```
+
+La principal diferencia entre la cláusula `ON` y `USING` es que en la primera nosotros podemos especificar la condición de reunión, es decir, que podríamos tener otros operadores para especificar la relación de reunión, en cambio, el `USING` realiza una reunión cuando ambos campos son iguales, con la particularidad de que sí se utilizan variables tuplas en la cláusula `SELECT` el atributo utilizado en el `USING` no debe ser asociado a ninguna de las dos tuplas debido a que se produciría una ambigüedad.
+
 >[!note] Reunión Natural
 >Las reuniones naturales en SQL se consiguen a través de la cláusula `NATURAL` que se pone antes del tipo de reunión, de esta forma la reunión se efectuará de acuerdo al atributo en común entre las dos relaciones.
+>Por lo general este tipo de reuniones no son convenientes de usar en la realidad, debido a que cuando se reúnen dos tablas de una aridad alta, puede que existan atributos con el mismo nombre de los cuales no se es consciente, lo que provocaría un resultado inesperado a la hora de realizar la consulta.
