--- a/4º Año/Bases de Datos/Unidad 4/2. Vistas, DDL y Restricciones de Integridad.md
+++ b/4º Año/Bases de Datos/Unidad 4/2. Vistas, DDL y Restricciones de Integridad.md
@@ -50,7 +50,7 @@ INSERT INTO cuenta
 -- sucursal centro que tenga un prestamo
 INSERT INTO cuenta
 	SELECT nro_cuenta, nombre_sucursal, 200
-		FROM pestamo
+		FROM prestamo
 		WHERE nombre_sucursal = 'Centro';
 ```
 
@@ -86,8 +86,8 @@ UPDATE cuenta
 ```
 
 >[!info] Actualización de Vistas
->Supongamos que tenemos una vista de nombre ***prestamo_sucursal***, la cual posee como atributos el nombre de sucursal y el número de préstamo de la tabla **préstamo**, el caso de que nosotros queramos agregar una nueva tupla a esta vista, la inserción de este dato se hará a la tabla **prestamo**, debido a que las vistas no almacenan datos, solo son la abstracción de una consulta. Este problema aumenta cuando la vista en la que se quiere introducir el dato está compuesta por atributos de varias tablas, es por eso que la mayoría de los sistemas de gestión de las bases de datos basadas en SQL imponen la siguiente restricción a la hora de modificar las vistas:
->- Una modificación de una vista es válida sólo si la vista en cuestión se define en términos de la base de datos relacional real, es decir, la relación no es resultado de una operación de `JOIN`, o que utilice alguna función de agregación.
+>Supongamos que tenemos una vista de nombre ***prestamo_sucursal***, la cual posee como atributos el nombre de sucursal y el número de préstamo de la tabla **préstamo**, el caso de que nosotros queramos agregar una nueva tupla a esta vista, la inserción de este dato se hará a la tabla **préstamo**, debido a que las vistas no almacenan datos, solo son la abstracción de una consulta. Este problema aumenta cuando la vista en la que se quiere introducir el dato está compuesta por atributos de varias tablas, es por eso que la mayoría de los sistemas de gestión de las bases de datos basadas en SQL imponen la siguiente restricción a la hora de modificar las vistas:
+>- Una modificación de una vista es válida solo si la vista en cuestión se define en términos de la base de datos relacional real, es decir, la relación no es resultado de una operación de `JOIN`, o que utilice alguna función de agregación.
 >En este contexto, las operaciones de `UPDATE`, `INSERT` y `DELETE` no se podrían realizar para la vista ***total_clientes***, dada como ejemplo anteriormente.
 
 ## Lenguaje de Definición de Datos (DDL)
