Unidad 3 Cálculo, Notas de clase DB

--- a/4º Año/Bases de Datos/Unidad 4/2. Vistas, DDL y Restricciones de Integridad.md
+++ b/4º Año/Bases de Datos/Unidad 4/2. Vistas, DDL y Restricciones de Integridad.md
@@ -66,6 +66,7 @@ En el caso de que se inserten valores utilizando una consulta, se debe asegurar 
 >INSERT INTO products (product_no, name, price)
 >	VALUES (1, 'Cheese', DEFAULT);
 >```
+>Debido que en la mayoría de los casos este tipo de consultas se realizan desde las aplicaciones, es recomendable siempre que se especifique el esquema de las tablas cuando se agreguen datos, tal y como se muestra en el ejemplo dado arriba, más aun si se agregan valores nulos o por defecto.
 
 Al igual que la inserción y la eliminación de datos SQL te permite elegir las tuplas y los atributos que se actualizarán. Esta actualización se realiza a través de la cláusula `UPDATE`, luego mediante una cláusula `SET` se especifica el nuevo valor. Veamos un par de ejemplos:
 
@@ -86,9 +87,11 @@ UPDATE cuenta
 ```
 
 >[!info] Actualización de Vistas
->Supongamos que tenemos una vista de nombre ***prestamo_sucursal***, la cual posee como atributos el nombre de sucursal y el número de préstamo de la tabla **préstamo**, el caso de que nosotros queramos agregar una nueva tupla a esta vista, la inserción de este dato se hará a la tabla **préstamo**, debido a que las vistas no almacenan datos, solo son la abstracción de una consulta. Este problema aumenta cuando la vista en la que se quiere introducir el dato está compuesta por atributos de varias tablas, es por eso que la mayoría de los sistemas de gestión de las bases de datos basadas en SQL imponen la siguiente restricción a la hora de modificar las vistas:
+>Supongamos que tenemos una vista de nombre ***prestamo_sucursal***, la cual posee como atributos el nombre de sucursal y el número de préstamo de la tabla **préstamo**, el caso de que nosotros queramos agregar una nueva tupla a esta vista, la inserción de este dato se hará a la tabla **préstamo**, debido a que las vistas no almacenan datos, solo son abstracciones de una consulta SQL. Este problema aumenta cuando la vista en la que se quiere introducir el dato está compuesta por atributos de varias tablas, es por eso que la mayoría de los sistemas de gestión de las bases de datos basadas en SQL imponen la siguiente restricción a la hora de modificar las vistas:
 >- Una modificación de una vista es válida solo si la vista en cuestión se define en términos de la base de datos relacional real, es decir, la relación no es resultado de una operación de `JOIN`, o que utilice alguna función de agregación.
+>
 >En este contexto, las operaciones de `UPDATE`, `INSERT` y `DELETE` no se podrían realizar para la vista ***total_clientes***, dada como ejemplo anteriormente.
+>Si bien esto puede lograrse a través de las las ***vistas materializadas***, las cuales si poseen una tabla propia donde se almacenan los datos, el único percance es que al realizar inserciones, actualizaciones o incluso borrados a las tablas asociadas se debe refrestar la tabla, lo mismo si se modifican elementos de la vista materializada, se tendrá que actualizar los valores en las respectivas tablas.
 
 ## Lenguaje de Definición de Datos (DDL)
 
